# ece420_android_app

./: README.md
ece420_project/: settings.gradle.kts
ece420_project/app/: build.gradle.kts
ece420_project/app/src/androidTest/java/com/example/ece420_project/: ExampleInstrumentedTest.java
ece420_project/app/src/main/: AndroidManifest.xml
ece420_project/app/src/main/cpp/: CMakeLists.txt  mfcc.cpp  mfcc.h  native-lib.cpp  recognizer.cpp  recognizer.h
ece420_project/app/src/main/java/com/example/ece420_project/: MainActivity.java
ece420_project/app/src/main/res/layout/: activity_main.xml
ece420_project/app/src/main/res/values/: strings.xml  themes.xml
ece420_project/app/src/main/res/values-night/: themes.xml
ece420_project/app/src/test/java/com/example/ece420_project/: ExampleUnitTest.java
ece420_project/gradle/wrapper/: gradle-wrapper.properties
